force-app/main/default/objects/Lead/fields/Got_Answer__c.field-meta.xml
<CustomField>
    <fullName>Got_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Got Answer</label>
    <type>Checkbox</type>
</CustomField>