force-app/main/default/objects/Lead/fields/Have_Budget__c.field-meta.xml
<CustomField>
    <fullName>Have_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Budget</label>
    <type>Checkbox</type>
</CustomField>