force-app/main/default/objects/Lead/fields/Motivo_da_desqualificacao__c.field-meta.xml
<CustomField>
    <fullName>Motivo_da_desqualificacao__c</fullName>
    <label>Motivo da desqualificacao</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>