force-app/main/default/objects/Lead/fields/Tipo_de_email__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_email__c</fullName>
    <label>Tipo de email</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email A</fullName>
            </value>
            <value>
                <fullName>Email B</fullName>
            </value>
            <value>
                <fullName>Email C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>