force-app/main/default/objects/Lead/recordTypes/testaqui.recordType-meta.xml
<RecordType>
    <fullName>testaqui</fullName>
    <active>true</active>
    <businessProcess>nao deu</businessProcess>
    <label>testaqui</label>
</RecordType>