force-app/main/default/objects/Lead/recordTypes/type_nao_deu.recordType-meta.xml
<RecordType>
    <fullName>type_nao_deu</fullName>
    <active>true</active>
    <businessProcess>nao deu</businessProcess>
    <label>type nao deu</label>
</RecordType>