force-app/main/default/objects/Lead/recordTypes/type_sem_deu.recordType-meta.xml
<RecordType>
    <fullName>type_sem_deu</fullName>
    <active>true</active>
    <businessProcess>test</businessProcess>
    <label>type sem deu</label>
</RecordType>